--- a/locales/en.toml
+++ b/locales/en.toml
@@ -51,6 +51,7 @@ action = "Action"
 update_tooltip = "Update list value"
 delete_tooltip = "Delete list value"
 value_placeholder = "Enter new value"
+delete_list_item_prompt = "Are you sure you want to delete this list item: %{index}?"
 
 [content]
 loading = "Loading..."
