--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -47,6 +47,10 @@ scan_more_keys = "扫描更多键"
 [list_editor]
 value = "值"
 action = "操作"
+update_tooltip = "更新列表值"
+delete_tooltip = "删除列表值"
+value_placeholder = "输入新值"
+delete_list_item_prompt = "您确定要删除此列表项：%{index}吗？"
 
 [content]
 loading = "加载中..."
