feat(connection): support insecure tls mode (skip certificate verification) (#12)

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -20,6 +20,8 @@ username = "Username"
 password = "Password"
 tls = "Tls"
 tls_check_label = "Enable tls"
+insecure_tls = "Insecure tls"
+insecure_tls_check_label = "Enable insecure tls"
 client_cert = "Client Certificate"
 client_key = "Client Key"
 root_cert = "Root Certificate"
