--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -19,6 +19,8 @@ port = "端口"
 password = "密码"
 tls = "Tls"
 tls_check_label = "启用 Tls"
+insecure_tls = "证书验证"
+insecure_tls_check_label = "跳过证书验证"
 client_cert = "客户端证书"
 client_key = "客户端密钥"
 root_cert = "根证书"
