fix(ui): align dialog button order with os standards

--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -42,6 +42,7 @@ key_placeholder = "输入键名"
 field_placeholder = "输入字段名"
 name_placeholder = "输入名称"
 host_placeholder = "输入主机地址"
+username_placeholder = "输入用户名, 仅用于 Redis 6.0+"
 port_placeholder = "输入端口 (默认: 6379)"
 password_placeholder = "输入密码"
 client_cert_placeholder = "输入客户端证书"
