refactor(connection): optimize connection reuse

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -90,6 +90,16 @@ update_server_title = "Edit Server"
 add_server_description = "Configure connection details for a new Redis instance."
 update_tooltip = "Edit connection details"
 remove_tooltip = "Delete this server configuration"
+ssh_tunnel = "SSH Tunnel"
+ssh_tunnel_check_label = "Enable ssh tunnel"
+ssh_addr = "SSH Address"
+ssh_username = "SSH Username"
+ssh_password = "SSH Password"
+ssh_key = "SSH Key"
+ssh_addr_placeholder = "Enter ssh address"
+ssh_username_placeholder = "Enter ssh username"
+ssh_password_placeholder = "Enter ssh password"
+ssh_key_placeholder = "Enter ssh key"
 
 [editor]
 delete_key_prompt = "Are you sure you want to delete this key: %{key}?"
