--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -90,6 +90,16 @@ update_server_title = "编辑服务器"
 add_server_description = "配置新 Redis 实例的连接详情。"
 update_tooltip = "编辑连接详情"
 remove_tooltip = "删除此服务器配置"
+ssh_tunnel = "SSH 隧道"
+ssh_tunnel_check_label = "启用 SSH 隧道"
+ssh_addr = "SSH 地址"
+ssh_username = "SSH 用户名"
+ssh_password = "SSH 密码"
+ssh_key = "SSH 密钥"
+ssh_addr_placeholder = "输入 SSH 地址"
+ssh_username_placeholder = "输入 SSH 用户名"
+ssh_password_placeholder = "输入 SSH 密码"
+ssh_key_placeholder = "输入 SSH 密钥"
 
 [editor]
 delete_key_prompt = "您确定要删除此键 (Key): %{key} 吗？"
