feat(editor): add advanced edit dialog with format conversion and compression
- Add EditValueDialog component for editing Redis bytes values
- Support format switching (Text, JSON, Hex, MessagePack) with value-level
  JSON ↔ MessagePack conversion
- Add compression format selection (None, Gzip, Zstd, Snappy, LZ4)
- Implement codec module with format detection, compression/decompression
- Add EditSession state management for tracking edits and validation
- Fix format switch error message display in UI layer
- Add zstd dependency for compression support

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -110,6 +110,7 @@ delete_key_tooltip = "Delete key"
 copy_key_tooltip = "Copy key name"
 copied_key_to_clipboard = "Copied key name to clipboard"
 can_not_edit_value = "Can not edit the value in this format"
+edit_dialog_tooltip = "Advanced edit (supports compression and format conversion)"
 
 [key_tree]
 no_keys_found = "No keys found"
