feat(editor): add advanced edit dialog with format conversion and compression
- Add EditValueDialog component for editing Redis bytes values
- Support format switching (Text, JSON, Hex, MessagePack) with value-level
  JSON ↔ MessagePack conversion
- Add compression format selection (None, Gzip, Zstd, Snappy, LZ4)
- Implement codec module with format detection, compression/decompression
- Add EditSession state management for tracking edits and validation
- Fix format switch error message display in UI layer
- Add zstd dependency for compression support

--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -100,6 +100,7 @@ delete_key_tooltip = "删除键 (Key)"
 copy_key_tooltip = "复制键名"
 copied_key_to_clipboard = "键名已复制到剪贴板"
 can_not_edit_value = "无法编辑此格式的值"
+edit_dialog_tooltip = "高级编辑（支持压缩和格式转换）"
 
 [key_tree]
 no_keys_found = "未找到任何键"
