feat(auth): add preset credentials for auto-authentication
Add support for preset credentials that automatically try multiple
passwords when connecting to Redis servers without configured auth.
This allows users to configure common credentials in settings and
have them tried in order when authentication is required.

- Add PresetCredential struct with custom Debug impl to mask passwords
- Implement try_open_with_preset_credentials fallback mechanism
- Add preset credentials UI in settings editor
- Pass credentials through save_value/save_bytes_value operations
- Add i18n support for credential prompts (en/zh)

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -174,3 +174,6 @@ key_separator = "Key Separator"
 key_separator_placeholder = "Enter key separator (default: :)"
 max_truncate_length = "Max Truncate Length(json)"
 max_truncate_length_placeholder = "Enter max truncate length (default: 1000)"
+preset_credentials = "Preset Credentials"
+preset_credentials_placeholder = "Enter credentials (one per line). Format: password or username:password"
+credential_save_prompt = "Connected using preset credential. Save to server config?"
