--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -175,3 +175,6 @@ key_separator = "键分隔符"
 key_separator_placeholder = "输入键分隔符 (默认: :)"
 max_truncate_length = "最大截断长度(json)"
 max_truncate_length_placeholder = "输入最大截断长度 (默认: 1000)"
+preset_credentials = "预设凭据"
+preset_credentials_placeholder = "输入凭据（每行一个）。格式：密码 或 用户名:密码"
+credential_save_prompt = "已使用预设凭据连接。是否保存到服务器配置？"
