feat(key-tree): add right-click context menu with duplicate and delete actions
Replace DropdownButton with native right-click context menu for key operations.
Use capture/bubble event phases to correctly handle menu state across tree items,
folders, and empty areas. Right-click now selects the key and syncs list highlight.

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -121,6 +121,8 @@ query_mode_prefix = "^ Prefix"
 query_mode_exact = "= Exact Match"
 category = "Category"
 add_key_title = "Add Key"
+duplicate_key = "Duplicate"
+delete_key = "Delete"
 
 [status_bar]
 toggle_terminal_tooltip = "Toggle redis terminal"
