--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -121,6 +121,8 @@ query_mode_prefix = "^ 前缀匹配"
 query_mode_exact = "= 精确匹配"
 category = "类型"
 add_key_title = "添加键"
+duplicate_key = "复制"
+delete_key = "删除"
 
 [status_bar]
 toggle_terminal_tooltip = "切换redis控制台"
