--- a/locales/en.toml
+++ b/locales/en.toml
@@ -79,6 +79,7 @@ master_nodes = "Master"
 slave_nodes = "Slave"
 settings_tooltip = "Open settings"
 github_tooltip = "Star on gitHub"
+close = "Close"
 
 [servers]
 master_name = "Master Name"
