feat(servers): move add server button to search bar with tooltip
Replace the "Add New Server" card with a compact button in the search
bar for a cleaner UI. Add dedicated tooltip text that follows the
existing naming convention (add_tooltip, update_tooltip, remove_tooltip).

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -91,6 +91,7 @@ update_server_title = "Edit Server"
 add_server_description = "Configure connection details for a new Redis instance."
 update_tooltip = "Edit connection details"
 remove_tooltip = "Delete this server configuration"
+add_tooltip = "Add a new server configuration"
 ssh_tunnel = "SSH Tunnel"
 ssh_tunnel_check_label = "Enable ssh tunnel"
 ssh_addr = "SSH Address"
