--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -91,6 +91,7 @@ update_server_title = "编辑服务器"
 add_server_description = "配置新 Redis 实例的连接详情。"
 update_tooltip = "编辑连接详情"
 remove_tooltip = "删除此服务器配置"
+add_tooltip = "添加新的服务器配置"
 ssh_tunnel = "SSH 隧道"
 ssh_tunnel_check_label = "启用 SSH 隧道"
 ssh_addr = "SSH 地址"
