--- a/locales/en.toml
+++ b/locales/en.toml
@@ -57,7 +57,7 @@ ttl_placeholder = "e.g., 1d or 1h"
 score_placeholder = "Enter score (default: 0.0)"
 
 remove_tooltip = "Remove item"
-remove_item_prompt = "Are you sure you want to delete this item: %{value} (Row %{row})?"
+remove_item_prompt = "Are you sure you want to delete this item (Row %{row})?"
 update_tooltip = "Update item"
 
 [sidebar]
