feat(key-tree): add refresh keys button with keyword preservation
Add a refresh button next to the add key button in the key tree toolbar.
The button re-executes the current search while preserving the keyword
across all query modes (All/Prefix/Exact) by setting keyword immediately
after reset_scan().

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -118,6 +118,7 @@ edit_dialog_tooltip = "Advanced edit (supports compression and format conversion
 no_keys_found = "No keys found"
 key_not_exists = "Key does not exist or has expired"
 search_tooltip = "Toggle key search mode"
+refresh_keys_tooltip = "Refresh keys"
 query_mode_all = "* Contains (Glob)"
 query_mode_prefix = "^ Prefix"
 query_mode_exact = "= Exact Match"
