--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -118,6 +118,7 @@ edit_dialog_tooltip = "高级编辑（支持压缩和格式转换）"
 no_keys_found = "未找到任何键"
 key_not_exists = "键不存在或已过期"
 search_tooltip = "切换键搜索模式"
+refresh_keys_tooltip = "刷新键列表"
 query_mode_all = "* 包含 (通配符)"
 query_mode_prefix = "^ 前缀匹配"
 query_mode_exact = "= 精确匹配"
