feat(sidebar): add edit connection option in right-click context menu
Add ability to edit connected server configuration from sidebar:
- Add "Edit" menu item before "Close" in right-click context menu
- Implement edit dialog with pre-filled current server configuration
- Detect config changes using hash comparison
- Add reconnect() method to force refresh when config changes
- Auto-refresh current tab after saving modified connection settings

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -80,6 +80,7 @@ slave_nodes = "Slave"
 settings_tooltip = "Open settings"
 github_tooltip = "Star on gitHub"
 close = "Close"
+edit = "Edit"
 
 [servers]
 master_name = "Master Name"
