--- a/locales/zh.toml
+++ b/locales/zh.toml
@@ -79,7 +79,7 @@ slave_nodes = "从节点"
 settings_tooltip = "打开设置"
 github_tooltip = "在 GitHub 上关注"
 close = "关闭"
-
+edit = "编辑"
 
 [servers]
 master_name = "主节点名称"
