feat(key-tree): add multi-select and batch delete for keys
Support Shift+click range selection in key tree and batch deletion
via right-click context menu. Adds visual highlighting for selected
keys and new events for selection state management.

--- a/locales/en.toml
+++ b/locales/en.toml
@@ -127,6 +127,7 @@ category = "Category"
 add_key_title = "Add Key"
 duplicate_key = "Duplicate"
 delete_key = "Delete"
+delete_selected = "Delete Selected"
 
 [status_bar]
 toggle_terminal_tooltip = "Toggle redis terminal"
